# biodumpy

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  CITATIONS.md  LICENSE  LICENSE.md  README.md  main.py  pyproject.toml  requirements.txt  ruff.toml  setup.cfg
.github/workflows/: ruff.yaml
biodumpy/: LICENSE.md  README.md  __init__.py  biodumpy.py  input.py  utils.py  version.py
biodumpy/inputs/: BALEARICA.py  BOLD.py  COL.py  Crossref.py  FileDownloader.py  GBIF.py  INaturalist.py  IUCN.py  NCBI.py  OBIS.py  PAPERDOWN.py  PaperDown.py  SCOPUS.py  Scopus.py  WORMS.py  ZOOBANK.py  ZooBank.py  __init__.py  iNaturalist.py
docs/: requirements.txt
docs/source/: BOLD_module.rst  GBIF_module.rst  IUCN_module.rst  NCBI_module.rst  To R.rst  bibliography.rst  conf.py  custom.css  functions.rst  index.rst  modules.rst  references.bib  usage.rst  useful_code.rst
docs/source/modules/: BOLD.rst  BOLD_module.rst  COL.rst  Crossref.rst  GBIF.rst  IUCN.rst  NCBI.rst  OBIS.rst  OBIS_module.rst  WORMS.rst  ZOOBANK.rst  ZOOBANK_module.rst  iNaturalist.rst
tests/: BOLD.py  COL.py  Crossref.py  GBIF.py  INaturalist.py  IUCN.py  NCBI.py  OBIS.py  WORMS.py  ZooBank.py  bold.py  iucn.py  ncbi.py  test_bold.py  test_col.py  test_gbif.py  test_obis.py  test_zoobank.py  zoobank.py
